fix(Accordion): fix spacing

--- a/packages/components/src/components/Accordion/Accordion.module.scss
+++ b/packages/components/src/components/Accordion/Accordion.module.scss
@@ -8,6 +8,14 @@
 
   .header {
     display: flex;
+
+    :global(.flow--heading--heading-text) {
+      flex-grow: 1;
+    }
+
+    button {
+      width: 100%;
+    }
   }
 
   .headerButton {
